--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview --port 4173",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit"
+    "build": "vite build",
+    "preview": "vite preview --port 4173"
   },
   "dependencies": {
     "vue": "^3.2.36",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@iconify/vue": "^3.2.1",
     "@types/node": "^16.11.36",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^8.7.3",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.2",
+    "unplugin-auto-import": "^0.8.8",
+    "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.9",
-    "vue-tsc": "^0.35.2"
+    "vite-plugin-fonts": "^0.4.0",
+    "vite-plugin-windicss": "^1.8.4",
+    "vue-tsc": "^0.35.2",
+    "windicss": "^3.5.4"
   }
 }
